# 3dsmax-mcp

./: .gitignore  LICENSE  README.md  install.py  uninstall.py
.claude/: CLAUDE.md
.claude/commands/: pull.md  push.md
.github/workflows/: validate.yml
docs/: data_channel_modifier.md  forest_pack_scatter_notes.md  self_describing_plugin_runtime.md
harness/: validate.py
maxscript/: mcp_server.ms
native/: CMakeLists.txt
native/include/mcp_bridge/: command_dispatcher.h  handler_helpers.h  main_thread_executor.h  native_handlers.h
native/src/: command_dispatcher.cpp  main_thread_executor.cpp  pipe_server.cpp
native/src/handlers/: controller_handlers.cpp  discovery_handlers.cpp  effects_handlers.cpp  file_handlers.cpp  inspect_handlers.cpp  learning_handlers.cpp  material_handlers.cpp  object_handlers.cpp  render_handlers.cpp  scene_handlers.cpp  scene_manage_handlers.cpp  state_sets_handlers.cpp  viewport_handlers.cpp
scripts/: benchmark_threading.py  build_skill.py  run_live_plugin_learning.py  run_live_smoke.py
skills/3dsmax-mcp-dev/: SKILL.md  maxscript-3dsmax-objects.md  maxscript-animation-controllers.md  maxscript-common-patterns.md  maxscript-core-syntax.md  maxscript-materials-textures.md  maxscript-mesh-poly-ops.md  maxscript-rendering-cameras.md  maxscript-scripted-plugins.md  maxscript-splines-shapes.md  maxscript-ui-rollouts.md
src/: lifecycle.py  max_client.py  safety.py  server.py
src/helpers/: maxscript.py
src/tools/: bridge.py  build.py  capabilities.py  clone.py  controllers.py  data_channel.py  effects.py  execute.py  file_access.py  floor_plan.py  grid.py  hierarchy.py  identify.py  inspect.py  learning.py  material_ops.py  material_replace.py  modifiers.py  objects.py  organize.py  plugins.py  railclone.py  render.py  scattering.py  scene_manage.py  scene_query.py  selection.py  session_context.py  snapshots.py  state_sets.py  transform.py  tyflow.py  verification.py  viewport.py  visibility.py  wire_params.py  workflows.py
tests/: conftest.py  mock_client.py  test_bridge.py  test_harness.py  test_lifecycle.py  test_material_slots.py  test_max_client.py  test_maxscript_helpers.py  test_mock_client.py  test_plugins.py  test_railclone_tools.py  test_safety.py  test_session_context.py  test_snapshots.py  test_tyflow_tools.py  test_workflows.py
